--- a/server/trunk/web/Sophie.spec.in
+++ b/server/trunk/web/Sophie.spec.in
@@ -29,6 +29,8 @@ BuildRequires: perl(DBIx::Class)
 BuildRequires: perl(Catalyst::Plugin::Compress::Zlib)
 BuildRequires: perl-Catalyst-Plugin-Server
 BuildRequires: perl(Catalyst::Plugin::Session::Store::DBI)
+BuildRequires: perl(Catalyst::Authentication::Store::DBIx::Class)
+BuildRequires: perl(Catalyst::Model::DBIC::Schema)
 
 Requires: perl(Catalyst)
 Requires: perl(Catalyst::Plugin::ConfigLoader)
@@ -43,6 +45,7 @@ Requires: perl(Catalyst::View::TT)
 Requires: perl(Catalyst::Plugin::Compress::Zlib)
 Requires: perl-Catalyst-Plugin-Server
 Requires: perl(Catalyst::Plugin::Session::Store::DBI)
+Requires: perl(Catalyst::Authentication::Store::DBIx::Class)
 # Requires: apache-mod_fastcgi
 # Requires: perl(FCGI)
 # Requires: apache-mod_proxy
