--- a/server/trunk/web/Sophie.spec.in
+++ b/server/trunk/web/Sophie.spec.in
@@ -31,6 +31,8 @@ BuildRequires: perl-Catalyst-Plugin-Server
 BuildRequires: perl(Catalyst::Plugin::Session::Store::DBI)
 BuildRequires: perl(Catalyst::Authentication::Store::DBIx::Class)
 BuildRequires: perl(Catalyst::Model::DBIC::Schema)
+BuildRequires: perl(Pod::Find)
+BuildRequires: perl(Pod::Mop)
 
 Requires: perl(Catalyst)
 Requires: perl(Catalyst::Plugin::ConfigLoader)
