- manage user role

--- a/server/trunk/web/Sophie.spec.in
+++ b/server/trunk/web/Sophie.spec.in
@@ -20,6 +20,7 @@ BuildRequires: perl(Catalyst::Plugin::Static::Simple)
 BuildRequires: perl(Catalyst::Action::RenderView)
 BuildRequires: perl(YAML)
 BuildRequires: perl(Catalyst::Plugin::Authentication)
+BuildRequires: perl(Catalyst::Plugin::Authorization::Roles)
 BuildRequires: perl(Catalyst::Plugin::Session)
 BuildRequires: perl(Catalyst::Plugin::Session::State::Cookie)
 BuildRequires: perl(Catalyst::Plugin::Prototype)
@@ -40,6 +41,7 @@ Requires: perl(Catalyst::Plugin::Static::Simple)
 Requires: perl(Catalyst::Action::RenderView)
 Requires: perl(YAML)
 Requires: perl(Catalyst::Plugin::Authentication)
+Requires: perl(Catalyst::Plugin::Authorization::Roles)
 Requires: perl(Catalyst::Plugin::Session)
 Requires: perl(Catalyst::Plugin::Session::State::Cookie)
 Requires: perl(Catalyst::Plugin::Prototype)
