--- a/server/trunk/web/Sophie.spec.in
+++ b/server/trunk/web/Sophie.spec.in
@@ -26,6 +26,7 @@ BuildRequires: perl(Catalyst::Plugin::Session::State::Cookie)
 BuildRequires: perl(Catalyst::Plugin::Prototype)
 BuildRequires: perl(Catalyst::View::TT)
 BuildRequires: perl(Catalyst::View::JSON)
+BuildRequires: perl(Catalyst::View::GD)
 BuildRequires: perl(DBIx::Class)
 BuildRequires: perl(Catalyst::Plugin::Compress::Zlib)
 BuildRequires: perl-Catalyst-Plugin-Server
@@ -36,6 +37,7 @@ BuildRequires: perl(Pod::Find)
 BuildRequires: perl(Pod::POM)
 BuildRequires: perl(XML::Simple)
 BuildRequires: perl(XML::RSS)
+BuildRequires: perl(GD::Graph)
 
 Requires: perl(Catalyst)
 Requires: perl(Catalyst::Plugin::ConfigLoader)
@@ -48,11 +50,14 @@ Requires: perl(Catalyst::Plugin::Session)
 Requires: perl(Catalyst::Plugin::Session::State::Cookie)
 Requires: perl(Catalyst::Plugin::Prototype)
 Requires: perl(Catalyst::View::TT)
+Requires: perl(Catalyst::View::JSON)
+Requires: perl(Catalyst::View::GD)
 Requires: perl(Catalyst::Plugin::Compress::Zlib)
 Requires: perl-Catalyst-Plugin-Server
 Requires: perl(Catalyst::Plugin::Session::Store::DBI)
 Requires: perl(Catalyst::Authentication::Store::DBIx::Class)
 Requires: perl(XML::RSS)
+Requires: perl(GD::Graph)
 # Requires: apache-mod_fastcgi
 # Requires: perl(FCGI)
 # Requires: apache-mod_proxy
