--- a/bot/trunk/sophie-tools.spec.in
+++ b/bot/trunk/sophie-tools.spec.in
@@ -14,6 +14,7 @@ Source:     %{realname}-%{version}.tar.gz
 Url:        http://search.cpan.org/dist/%{realname}
 BuildRoot:  %{_tmppath}/%{name}-%{version}-%{release}-buildroot
 BuildArch:  noarch
+BuildRequires: perl(RPC::XML)
 
 Requires: perl-Term-ReadLine-Gnu
 
