- add iniscript for sophie-update - sophie-update update also maintainers

--- a/server/trunk/web/Sophie.spec.in
+++ b/server/trunk/web/Sophie.spec.in
@@ -82,6 +82,10 @@ mkdir -p %buildroot/%_sysconfdir/cron.daily
 
 install -m 755 bin/sophie_cron %buildroot/%_sysconfdir/cron.daily/sophie_cron
 
+mkdir -p %buildroot/%_sysconfdir/init.d
+
+install -m 755 sysinit/sophie-scan %buildroot/%_sysconfdir/init.d/sophie-scan
+
 %clean
 rm -rf %buildroot
 
@@ -90,6 +94,7 @@ rm -rf %buildroot
 %doc Changes README
 %dir %_sysconfdir/sophie
 %_sysconfdir/cron.daily/sophie_cron
+%_sysconfdir/init.d/sophie-scan
 %config(noreplace) %_sysconfdir/sophie/*
 %_bindir/*
 %{_mandir}/man3/*
