--- a/bot/trunk/sophie-bot.spec.in
+++ b/bot/trunk/sophie-bot.spec.in
@@ -37,12 +37,16 @@ make test
 rm -rf %buildroot
 %makeinstall_std
 
+mkdir -p %buildroot%_sysconfdir/init.d
+install -m755 sysinit/sophie-bot %buildroot%_sysconfdir/init.d/sophie-bot
+
 %clean
 rm -rf %buildroot
 
 %files
 %defattr(-,root,root)
 %doc Changes README
+%_sysconfdir/init.d/sophie-bot
 %_bindir/*
 %{_mandir}/*/*
 %perl_vendorlib/*
